--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,32 @@ jobs:
           destination-github-username: "thinkerall"
           destination-repository-name: "thinkerall.github.io"
           user-email: 486103739@qq.com
+          
+      - name: Algolia Index Uploader en
+        # You may pin to the exact commit or the version.
+        # uses: rxrw/algolia-index-uploader@294d1d600c4a2197a64903b6161cc80acea1becb
+        uses: rxrw/algolia-index-uploader@v1
+        with:
+          # Your Algolia IndexPath
+          index_path: public/index.json   <-- 生成的index.json位置，默认即可
+          # Algolia Index Id
+          algolia_index_id: N170ZR7D2B  <-- 你的indexId, 即之前获得的`application ID`
+          # Algolia Index Name
+          algolia_index_name: index.en  <--- 你创建的index名字
+          # Algolia Admin Key
+          algolia_index_admin_key: b91a3e4cb93b609d356b0756ed69ffa7  <--- 上图中获取的admin Key
+          
+      - name: Algolia Index Uploader zh-cn
+        # You may pin to the exact commit or the version.
+        # uses: rxrw/algolia-index-uploader@294d1d600c4a2197a64903b6161cc80acea1becb
+        uses: rxrw/algolia-index-uploader@v1
+        with:
+          # Your Algolia IndexPath
+          index_path: public/zh-cn/index.json   <-- 生成的index.json位置，默认即可
+          # Algolia Index Id
+          algolia_index_id: N170ZR7D2B  <-- 你的indexId, 即之前获得的`application ID`
+          # Algolia Index Name
+          algolia_index_name: index.zh-cn  <--- 你创建的index名字
+          # Algolia Admin Key
+          algolia_index_admin_key: b91a3e4cb93b609d356b0756ed69ffa7  <--- 上图中获取的admin Key
+          
