--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,22 +41,12 @@ jobs:
       - name: Build
         run: hugo
 
-      - name: Pushes to another repository 1
+      - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source-directory: "public"
-          destination-github-username: "thinkerall"
-          destination-repository-name: "thinkerall.github.io"
-          user-email: 486103739@qq.com
-          
-      - name: Pushes to another repository 2
-        uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-        with:
-          source-directory: "nojekyll"
           destination-github-username: "thinkerall"
           destination-repository-name: "thinkerall.github.io"
           user-email: 486103739@qq.com
