--- a/config.toml
+++ b/config.toml
@@ -13,13 +13,13 @@ title = "Thinker's Blog"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
-defaultContentLanguage = "zh-cn"
+defaultContentLanguage = "en"
 # language code ["en", "zh-CN", "fr", "pl", ...]
 # 网站语言, 仅在这里 CN 大写 ["en", "zh-CN", "fr", "pl", ...]
-languageCode = "zh-CN"
+languageCode = "en"
 # language name ["English", "简体中文", "Français", "Polski", ...]
 # 语言名称 ["English", "简体中文", "Français", "Polski", ...]
-languageName = "简体中文"
+languageName = "English"
 # whether to include Chinese/Japanese/Korean
 # 是否包括中日韩文字
 hasCJKLanguage = false
@@ -32,7 +32,7 @@ paginate = 12
 googleAnalytics = ""
 # copyright description used only for seo schema
 # 版权描述，仅仅用于 SEO
-copyright = ""
+copyright = "Weiye Chen"
 
 # whether to use robots.txt
 # 是否使用 robots.txt
@@ -242,9 +242,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     # 是否在搜索索引中使用基于 baseURL 的绝对路径
     absoluteURL = false
     [params.search.algolia]
-      index = "index.zh-cn"
-      appID = "N170ZR7D2B"
-      searchKey = "d760676380ec65544fbac0e68a8a7115"
+      index = ""
+      appID = ""
+      searchKey = ""
 
   # Home page config
   # 主页信息设置
@@ -267,7 +267,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       title = ""
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "A Clean, Elegant but Advanced Hugo Theme"
+      subtitle = "Weclome to visit my blog!"
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
@@ -789,7 +789,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # 多语言
 [languages]
   [languages.en]
-    weight = 2
+    weight = 1
     languageCode = "en"
     languageName = "English"
     hasCJKLanguage = false
@@ -841,7 +841,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
         post = ""
         name = ""
-        url = "https://github.com/thinkerall"
+        url = "https://github.com/thinkerall/thinkerall.github.io"
         title = "GitHub"
     [languages.en.params]
       [languages.en.params.search]
@@ -874,16 +874,14 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         Instagram = "weiye9751"
         Facebook = "profile.php?id=100088139658197"
         Telegram = "thinker_physics"
-        Youtubelegacy = "xxxx"
-        Phone = "555-555-555"
         Email = "chenweiye.thinker@gmail.com"
-        RSS = true
+        RSS = false
         [languages.en.params.social.Mastodon]
           id = "@xxxx"
           prefix = "https://mastodon.technology/"
 
   [languages.zh-cn]
-    weight = 1
+    weight = 2
     languageCode = "zh-CN"
     languageName = "简体中文"
     hasCJKLanguage = true
@@ -934,7 +932,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
         post = ""
         name = ""
-        url = "https://github.com/thinkerall"
+        url = "https://github.com/thinkerall/thinkerall.github.io"
         title = "GitHub"
     [languages.zh-cn.params]
       [languages.zh-cn.params.search]
@@ -963,12 +961,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
           disclaimer = ""
       [languages.zh-cn.params.social]
         GitHub = "thinkerall"
-        Weibo = "xxxx"
-        Steam = "76561199034787110"
         Zhihu = "cwydai"
-        Douban = "xxxx"
-        Devto = "xxxx"
         Bilibili = "434421510"
         Email = "chenweiye.thinker@gmail.com"
-        Phone = "555-555-555"
-        RSS = true
+        RSS = false
