--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ themesDir = "themes"
 
 # website title
 # 网站标题
-title = "Thinker's Blog"
+title = "William's Blog"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
@@ -51,7 +51,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # Author config
 # 作者配置
 [author]
-  name = "thinker"
+  name = "William"
   email = "chenweiye.thinker@gmail.com"
   link = "https://thinkerall.github.io/"
 
@@ -106,7 +106,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
   # 网站标题, 用于 Open Graph 和 Twitter Cards
-  title = "Thinker's Blog"
+  title = "William's Blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
   description = "The website is a personal blog for learning and sharing knowledge."
@@ -131,7 +131,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       logo = ""
       # title name
       # 标题名称
-      name = "Thinker's Blog"
+      name = "William's Blog"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre =""
@@ -199,7 +199,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "Thinker's Blog"
+    title = "William's Blog"
     # whether to omit favicon resource links
     # 是否隐藏网站图标资源链接
     noFavicon = false
@@ -264,7 +264,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       avatarURL = "/images/avatar.png"
       # title shown in home page (HTML format is supported)
       # 主页显示的网站标题 (支持 HTML 格式)
-      title = "Thinker's Blog"
+      title = "William's Blog"
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
       subtitle = "Just for knowledge!Just for truth!"
@@ -833,7 +833,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
         post = ""
         name = ""
-        url = "https://github.com/thinkerall/thinkerall.github.io"
+        url = "https://github.com/thinkerall"
         title = "GitHub"
     [languages.en.params]
       [languages.en.params.search]
@@ -856,19 +856,15 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
           gravatarEmail = ""
           avatarURL = "/images/avatar.png"
           title = ""
-          subtitle = "Just for knowledge!Just for truth!"
+          subtitle = "The truth shall make you free."
           typeit = true
           social = true
           disclaimer = ""
       [languages.en.params.social]
         GitHub = "thinkerall"
-        Twitter = "thinker_physics"
-        Instagram = "weiye9751"
-        Facebook = "profile.php?id=100088139658197"
-        Telegram = "thinker_physics"
-		Googlescholar = ""
-		Researchgate = "Weiye-Chen-5"
-        Email = "chenweiye.thinker@gmail.com"
+		    Googlescholar = ""
+		    Researchgate = "Weiye-Chen-5"
+        Email = "486103739@qq.com"
         RSS = true
 
   [languages.zh-cn]
@@ -938,8 +934,8 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
           enable = true
           gravatarEmail = ""
           avatarURL = "/images/avatar.png"
-          title = "Thinker's Blog"
-          subtitle = "为了知识！为了真理！"
+          title = ""
+          subtitle = "真理使人自由。"
           typeit = true
           social = true
           disclaimer = ""
