--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://thinkerall.github.io/"
+baseURL = "https://weiye-chen.github.io/"
 
 # theme
 # 主题
@@ -13,16 +13,16 @@ title = "William's Blog"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
-defaultContentLanguage = "en"
-# language code ["en", "zh-CN", "fr", "pl", ...]
+defaultContentLanguage = "zh-cn"
+# language code ["en", "zh-cn", "fr", "pl", ...]
 # 网站语言, 仅在这里 CN 大写 ["en", "zh-CN", "fr", "pl", ...]
-languageCode = "en"
+languageCode = "zh-cn"
 # language name ["English", "简体中文", "Français", "Polski", ...]
 # 语言名称 ["English", "简体中文", "Français", "Polski", ...]
-languageName = "English"
+languageName = "简体中文"
 # whether to include Chinese/Japanese/Korean
 # 是否包括中日韩文字
-hasCJKLanguage = false
+hasCJKLanguage = true
 
 # default amount of posts in each pages
 # 默认每页列表显示的文章数目
@@ -53,7 +53,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 [author]
   name = "William"
   email = "chenweiye.thinker@gmail.com"
-  link = "https://thinkerall.github.io/"
+  link = "https://weiye-chen.github.io/"
 
 # Menu config
 # 菜单配置
@@ -95,7 +95,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   defaultTheme = "auto"
   # public git repo url only then enableGitInfo is true
   # 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
-  gitRepo = "https://github.com/thinkerall/thinkerall.github.io"
+  gitRepo = "https://github.com/weiye-chen/weiye-chen.github.io"
   # which hash function used for SRI, when empty, no SRI is used
   # ["sha256", "sha384", "sha512", "md5"]
   # 哪种哈希函数用来 SRI, 为空时表示不使用 SRI
@@ -497,7 +497,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       # Gitalk 评论系统设置 (https://github.com/gitalk/gitalk)
       [params.page.comment.gitalk]
         enable = true
-        owner = "thinkerall"
+        owner = "weiye-chen"
         repo = "blog-comment"
         clientId = "8716450d77022a5ec37e"
         clientSecret = "c7e86b40e9e18ed9327e71d6cd0c25226c20ec7f"
@@ -833,7 +833,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
         post = ""
         name = ""
-        url = "https://github.com/thinkerall"
+        url = "https://github.com/weiye-chen"
         title = "GitHub"
     [languages.en.params]
       [languages.en.params.search]
@@ -861,7 +861,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
           social = true
           disclaimer = ""
       [languages.en.params.social]
-        GitHub = "thinkerall"
+        GitHub = "weiye-chen"
 		    Googlescholar = ""
 		    Researchgate = "Weiye-Chen-5"
         Email = "486103739@qq.com"
@@ -912,7 +912,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
         post = ""
         name = ""
-        url = "https://github.com/thinkerall/thinkerall.github.io"
+        url = "https://github.com/weiye-chen/weiye-chen.github.io"
         title = "GitHub"
     [languages.zh-cn.params]
       [languages.zh-cn.params.search]
@@ -940,8 +940,8 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
           social = true
           disclaimer = ""
       [languages.zh-cn.params.social]
-        GitHub = "thinkerall"
-        Zhihu = "thinkerall"
+        GitHub = "weiye-chen"
+        Zhihu = "weiye-chen"
         Bilibili = "434421510"
         Email = "486103739@qq.com"
         RSS = true
