--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source-directory: "public"
-          destination-github-username: "chen"
+          destination-github-username: "weiye-chen"
           destination-repository-name: "weiye-chen.github.io"
           user-email: 486103739@qq.com
           
